src/test/ui/issue-23041.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-23041.rs:16:22
   |
16 |     b.downcast_ref::<fn(_)->_>(); //~ ERROR E0282
   |                      ^^^^^^^^ cannot infer type for `_`

error: aborting due to previous error

